# carswash-new-mono

./: .gitignore  CLAUDE.md  README.md  biome.json  commitlint.config.js  lefthook.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml  vercel.json
apps/api/app/: __init__.py  config.py  db.py  deps.py  export_openapi.py  main.py
apps/api/app/api/: _common.py  boxes.py  catalog.py  lookup.py  me.py  members.py  orders.py  pricing.py  shifts.py
apps/api/app/auth/: __init__.py  capabilities.py  guards.py  jwt.py  tenancy.py
apps/api/app/models/: __init__.py  _external.py  base.py  catalog.py  enums.py  operations.py  tenancy.py
apps/api/app/services/: __init__.py  supabase_admin.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_tenancy.py  0002_pricing.py  0003_orders.py  0004_rls.py  0005_order_washers.py  0006_currency_to_car_wash.py  0007_cars_org_and_order_car_type.py  0008_is_active_flags.py  0009_updated_at_triggers.py  0010_dedup_and_checks.py  0011_payments.py  0012_shift_till_and_cash_movements.py  0013_order_money_breakdown.py  0014_washer_payroll_snapshot.py  0015_order_number.py  0016_walkin_and_client_kind.py  0017_tenant_integrity.py  0018_handle_new_user.py  0019_realtime.py  0020_car_wash_country.py
apps/api/scripts/: seed.py
apps/api/tests/: test_auth.py  test_catalog_boxes_shifts.py  test_health.py  test_members.py  test_money_foundations.py  test_orders_money.py  test_rls.py  test_schema.py
apps/web/: .env.example  .gitignore  next.config.ts  package.json
apps/web/messages/: en.json  kk.json  ru.json
apps/web/src/: proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: car-wash-switcher.tsx  language-switcher.tsx  license-plate.test.ts  license-plate.tsx  logout-button.tsx  providers.tsx  status-badge.tsx  theme-provider.tsx  theme-toggle.tsx
apps/web/src/components/admin/: active-badge.tsx  admin-section.tsx  admin-shell.tsx  boxes-section.tsx  car-types-section.tsx  entity-dialog.tsx  member-dialog.tsx  package-dialog.tsx  packages-section.tsx  (+5 more)
apps/web/src/hooks/: use-admin.ts  use-board-data.ts  use-catalog.ts  use-members.ts  use-orders.ts  use-realtime-board.ts  use-shift.ts
apps/web/src/i18n/: config.ts  request.ts
apps/web/src/lib/: action-error.test.ts  action-error.ts  actions.ts  admin-access.ts  api-client.ts  api.ts  env.ts  errors.test.ts  errors.ts  format.test.ts  format.ts  i18n-catalogs.test.ts  intake.test.ts  intake.ts  members.test.ts  members.ts  messages.ts  order-cache.test.ts  order-cache.ts  order-filters.test.ts  order-filters.ts  price-matrix.test.ts  price-matrix.ts  pricing.test.ts  pricing.ts  query-client.ts  status.test.ts  status.ts  tenant-context.tsx  toast.ts
docs/: ARCHITECTURE.md  CONVENTIONS.md  DB.md  ROADMAP.md  UI.md  ci-smoke-test.md
docs/ai/: phase-00-foundations.md  phase-00b-publish.md  phase-1.6-decisions.md  phase-1.6-review.md
(+34 files in other folders)
