[project]
name = "carswash-api"
version = "0.1.0"
description = "CarsWash backend API (FastAPI)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, simplify.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
